mienne/parse.output
Terminals unused in grammar

   ERR


Grammar

    0 $accept: program $end

    1 program: class_declaration_list

    2 class_declaration_list: class_declaration
    3                       | class_declaration_list class_declaration

    4 class_declaration: modificator class_type CLASS IDENT LBRACE class_body RBRACE

    5 modificator: PRIVATE
    6            | PUBLIC
    7            | PROTECTED
    8            | /* empty */

    9 class_type: STATIC
   10           | /* empty */

   11 class_body: /* empty */
   12           | core_body_sequence

   13 core_body_sequence: core_body
   14                   | core_body_sequence core_body

   15 core_body: statement
   16          | constructor_declaration
   17          | LBRACE RBRACE
   18          | LBRACE core_body_sequence RBRACE

   19 instanciation: type_abstract IDENT ASSIGN creation_object SEMICOLON

   20 creation_object: NEW IDENT LPAREN args RPAREN

   21 constructor_declaration: IDENT LPAREN params RPAREN LBRACE constructor_body RBRACE

   22 constructor_body: /* empty */
   23                 | constructor_body constructor_assignment SEMICOLON

   24 constructor_assignment: THIS DOT IDENT ASSIGN expression

   25 params: /* empty */
   26       | param_list

   27 param_list: param_def
   28           | param_list COMMA param_def

   29 param_def: types IDENT

   30 assignment: IDENT ASSIGN expression
   31           | IDENT ASSIGN array_access
   32           | IDENT ASSIGN method_call
   33           | array_access ASSIGN expression

   34 variables_declaration: type_abstract variables_init SEMICOLON
   35                      | premitive_type variables_init SEMICOLON

   36 constantes_declaration: FINAL type_abstract constantes_init SEMICOLON
   37                       | FINAL premitive_type constantes_init SEMICOLON

   38 variables_init: variables_init COMMA variable_init
   39               | variable_init

   40 constantes_init: constantes_init COMMA assignment
   41                | assignment

   42 variable_init: IDENT
   43              | assignment

   44 statement: assignment SEMICOLON
   45          | array_declaration
   46          | variables_declaration
   47          | constantes_declaration
   48          | print_statement SEMICOLON
   49          | method_call SEMICOLON
   50          | instanciation

   51 print_statement: SYSTEM DOT OUT DOT PRINTLN LPAREN expression RPAREN

   52 sufix_methode_list: IDENT DOT IDENT
   53                   | sufix_methode_list DOT IDENT

   54 method_prefix: THIS
   55              | SELF

   56 method_call: sufix_methode_list LPAREN args RPAREN
   57            | method_prefix DOT IDENT LPAREN args RPAREN

   58 args: /* empty */
   59     | arg_list

   60 arg_list: expression
   61         | arg_list COMMA expression

   62 expression: expression PLUS simple_expression
   63           | expression MINUS simple_expression
   64           | expression MULTIPLY simple_expression
   65           | expression DIVIDE simple_expression
   66           | expression MOD simple_expression
   67           | expression EQ simple_expression
   68           | expression NEQ simple_expression
   69           | expression LT simple_expression
   70           | expression GT simple_expression
   71           | expression LTE simple_expression
   72           | expression GTE simple_expression
   73           | expression AND simple_expression
   74           | expression OR simple_expression
   75           | MINUS expression
   76           | simple_expression

   77 simple_expression: NOT simple_expression
   78                  | LPAREN expression RPAREN
   79                  | IDENT
   80                  | NUM
   81                  | STRING_LITERAL

   82 types: premitive_type
   83      | type_abstract
   84      | array_type

   85 premitive_type: INT
   86               | FLOAT
   87               | BOOLEAN
   88               | CHAR
   89               | DOUBLE
   90               | VOID
   91               | STRING
   92               | LONG
   93               | SHORT

   94 array_type: premitive_type LBRACKET RBRACKET
   95           | IDENT LBRACKET RBRACKET

   96 type_abstract: IDENT

   97 array_declaration: array_type IDENT SEMICOLON
   98                  | array_type IDENT ASSIGN array_initialization SEMICOLON

   99 array_initialization: NEW type_abstract array_dimensions
  100                     | NEW premitive_type array_dimensions
  101                     | LBRACE array_elements RBRACE

  102 array_dimensions: LBRACKET expression RBRACKET
  103                 | array_dimensions LBRACKET expression RBRACKET

  104 array_elements: expression
  105               | array_elements COMMA expression

  106 array_access: IDENT array_indices

  107 array_indices: LBRACKET expression RBRACKET
  108              | array_indices LBRACKET expression RBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOLEAN (258) 87
CHAR (259) 88
CLASS (260) 4
DOUBLE (261) 89
FLOAT (262) 86
FINAL (263) 36 37
INT (264) 85
STRING (265) 91
LONG (266) 92
PRIVATE (267) 5
PROTECTED (268) 7
VOID (269) 90
PUBLIC (270) 6
SHORT (271) 93
STATIC (272) 9
NEW (273) 20 99 100
THIS (274) 24 54
SELF (275) 55
ASSIGN (276) 19 24 30 31 32 33 98
EQ (277) 67
NEQ (278) 68
LT (279) 69
GT (280) 70
LTE (281) 71
GTE (282) 72
AND (283) 73
OR (284) 74
NOT (285) 77
PLUS (286) 62
MINUS (287) 63 75
MULTIPLY (288) 64
DIVIDE (289) 65
MOD (290) 66
STRING_LITERAL (291) 81
LPAREN (292) 20 21 51 56 57 78
RPAREN (293) 20 21 51 56 57 78
LBRACE (294) 4 17 18 21 101
RBRACE (295) 4 17 18 21 101
LBRACKET (296) 94 95 102 103 107 108
RBRACKET (297) 94 95 102 103 107 108
SEMICOLON (298) 19 23 34 35 36 37 44 48 49 97 98
COMMA (299) 28 38 40 61 105
DOT (300) 24 51 52 53 57
IDENT (301) 4 19 20 21 24 29 30 31 32 42 52 53 57 79 95 96 97 98 106
NUM (302) 80
SYSTEM (303) 51
OUT (304) 51
PRINTLN (305) 51
ERR (306)
UMINUS (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program (54)
    on left: 1, on right: 0
class_declaration_list (55)
    on left: 2 3, on right: 1 3
class_declaration (56)
    on left: 4, on right: 2 3
modificator (57)
    on left: 5 6 7 8, on right: 4
class_type (58)
    on left: 9 10, on right: 4
class_body (59)
    on left: 11 12, on right: 4
core_body_sequence (60)
    on left: 13 14, on right: 12 14 18
core_body (61)
    on left: 15 16 17 18, on right: 13 14
instanciation (62)
    on left: 19, on right: 50
creation_object (63)
    on left: 20, on right: 19
constructor_declaration (64)
    on left: 21, on right: 16
constructor_body (65)
    on left: 22 23, on right: 21 23
constructor_assignment (66)
    on left: 24, on right: 23
params (67)
    on left: 25 26, on right: 21
param_list (68)
    on left: 27 28, on right: 26 28
param_def (69)
    on left: 29, on right: 27 28
assignment (70)
    on left: 30 31 32 33, on right: 40 41 43 44
variables_declaration (71)
    on left: 34 35, on right: 46
constantes_declaration (72)
    on left: 36 37, on right: 47
variables_init (73)
    on left: 38 39, on right: 34 35 38
constantes_init (74)
    on left: 40 41, on right: 36 37 40
variable_init (75)
    on left: 42 43, on right: 38 39
statement (76)
    on left: 44 45 46 47 48 49 50, on right: 15
print_statement (77)
    on left: 51, on right: 48
sufix_methode_list (78)
    on left: 52 53, on right: 53 56
method_prefix (79)
    on left: 54 55, on right: 57
method_call (80)
    on left: 56 57, on right: 32 49
args (81)
    on left: 58 59, on right: 20 56 57
arg_list (82)
    on left: 60 61, on right: 59 61
expression (83)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76, on right:
    24 30 33 51 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 78
    102 103 104 105 107 108
simple_expression (84)
    on left: 77 78 79 80 81, on right: 62 63 64 65 66 67 68 69 70 71
    72 73 74 76 77
types (85)
    on left: 82 83 84, on right: 29
premitive_type (86)
    on left: 85 86 87 88 89 90 91 92 93, on right: 35 37 82 94 100
array_type (87)
    on left: 94 95, on right: 84 97 98
type_abstract (88)
    on left: 96, on right: 19 34 36 83 99
array_declaration (89)
    on left: 97 98, on right: 45
array_initialization (90)
    on left: 99 100 101, on right: 98
array_dimensions (91)
    on left: 102 103, on right: 99 100 103
array_elements (92)
    on left: 104 105, on right: 101 105
array_access (93)
    on left: 106, on right: 31 33
array_indices (94)
    on left: 107 108, on right: 106 108


state 0

    0 $accept: . program $end

    PRIVATE    shift, and go to state 1
    PROTECTED  shift, and go to state 2
    PUBLIC     shift, and go to state 3

    $default  reduce using rule 8 (modificator)

    program                 go to state 4
    class_declaration_list  go to state 5
    class_declaration       go to state 6
    modificator             go to state 7


state 1

    5 modificator: PRIVATE .

    $default  reduce using rule 5 (modificator)


state 2

    7 modificator: PROTECTED .

    $default  reduce using rule 7 (modificator)


state 3

    6 modificator: PUBLIC .

    $default  reduce using rule 6 (modificator)


state 4

    0 $accept: program . $end

    $end  shift, and go to state 8


state 5

    1 program: class_declaration_list .
    3 class_declaration_list: class_declaration_list . class_declaration

    PRIVATE    shift, and go to state 1
    PROTECTED  shift, and go to state 2
    PUBLIC     shift, and go to state 3

    $end      reduce using rule 1 (program)
    $default  reduce using rule 8 (modificator)

    class_declaration  go to state 9
    modificator        go to state 7


state 6

    2 class_declaration_list: class_declaration .

    $default  reduce using rule 2 (class_declaration_list)


state 7

    4 class_declaration: modificator . class_type CLASS IDENT LBRACE class_body RBRACE

    STATIC  shift, and go to state 10

    $default  reduce using rule 10 (class_type)

    class_type  go to state 11


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 class_declaration_list: class_declaration_list class_declaration .

    $default  reduce using rule 3 (class_declaration_list)


state 10

    9 class_type: STATIC .

    $default  reduce using rule 9 (class_type)


state 11

    4 class_declaration: modificator class_type . CLASS IDENT LBRACE class_body RBRACE

    CLASS  shift, and go to state 12


state 12

    4 class_declaration: modificator class_type CLASS . IDENT LBRACE class_body RBRACE

    IDENT  shift, and go to state 13


state 13

    4 class_declaration: modificator class_type CLASS IDENT . LBRACE class_body RBRACE

    LBRACE  shift, and go to state 14


state 14

    4 class_declaration: modificator class_type CLASS IDENT LBRACE . class_body RBRACE

    BOOLEAN  shift, and go to state 15
    CHAR     shift, and go to state 16
    DOUBLE   shift, and go to state 17
    FLOAT    shift, and go to state 18
    FINAL    shift, and go to state 19
    INT      shift, and go to state 20
    STRING   shift, and go to state 21
    LONG     shift, and go to state 22
    VOID     shift, and go to state 23
    SHORT    shift, and go to state 24
    THIS     shift, and go to state 25
    SELF     shift, and go to state 26
    LBRACE   shift, and go to state 27
    IDENT    shift, and go to state 28
    SYSTEM   shift, and go to state 29

    $default  reduce using rule 11 (class_body)

    class_body               go to state 30
    core_body_sequence       go to state 31
    core_body                go to state 32
    instanciation            go to state 33
    constructor_declaration  go to state 34
    assignment               go to state 35
    variables_declaration    go to state 36
    constantes_declaration   go to state 37
    statement                go to state 38
    print_statement          go to state 39
    sufix_methode_list       go to state 40
    method_prefix            go to state 41
    method_call              go to state 42
    premitive_type           go to state 43
    array_type               go to state 44
    type_abstract            go to state 45
    array_declaration        go to state 46
    array_access             go to state 47


state 15

   87 premitive_type: BOOLEAN .

    $default  reduce using rule 87 (premitive_type)


state 16

   88 premitive_type: CHAR .

    $default  reduce using rule 88 (premitive_type)


state 17

   89 premitive_type: DOUBLE .

    $default  reduce using rule 89 (premitive_type)


state 18

   86 premitive_type: FLOAT .

    $default  reduce using rule 86 (premitive_type)


state 19

   36 constantes_declaration: FINAL . type_abstract constantes_init SEMICOLON
   37                       | FINAL . premitive_type constantes_init SEMICOLON

    BOOLEAN  shift, and go to state 15
    CHAR     shift, and go to state 16
    DOUBLE   shift, and go to state 17
    FLOAT    shift, and go to state 18
    INT      shift, and go to state 20
    STRING   shift, and go to state 21
    LONG     shift, and go to state 22
    VOID     shift, and go to state 23
    SHORT    shift, and go to state 24
    IDENT    shift, and go to state 48

    premitive_type  go to state 49
    type_abstract   go to state 50


state 20

   85 premitive_type: INT .

    $default  reduce using rule 85 (premitive_type)


state 21

   91 premitive_type: STRING .

    $default  reduce using rule 91 (premitive_type)


state 22

   92 premitive_type: LONG .

    $default  reduce using rule 92 (premitive_type)


state 23

   90 premitive_type: VOID .

    $default  reduce using rule 90 (premitive_type)


state 24

   93 premitive_type: SHORT .

    $default  reduce using rule 93 (premitive_type)


state 25

   54 method_prefix: THIS .

    $default  reduce using rule 54 (method_prefix)


state 26

   55 method_prefix: SELF .

    $default  reduce using rule 55 (method_prefix)


state 27

   17 core_body: LBRACE . RBRACE
   18          | LBRACE . core_body_sequence RBRACE

    BOOLEAN  shift, and go to state 15
    CHAR     shift, and go to state 16
    DOUBLE   shift, and go to state 17
    FLOAT    shift, and go to state 18
    FINAL    shift, and go to state 19
    INT      shift, and go to state 20
    STRING   shift, and go to state 21
    LONG     shift, and go to state 22
    VOID     shift, and go to state 23
    SHORT    shift, and go to state 24
    THIS     shift, and go to state 25
    SELF     shift, and go to state 26
    LBRACE   shift, and go to state 27
    RBRACE   shift, and go to state 51
    IDENT    shift, and go to state 28
    SYSTEM   shift, and go to state 29

    core_body_sequence       go to state 52
    core_body                go to state 32
    instanciation            go to state 33
    constructor_declaration  go to state 34
    assignment               go to state 35
    variables_declaration    go to state 36
    constantes_declaration   go to state 37
    statement                go to state 38
    print_statement          go to state 39
    sufix_methode_list       go to state 40
    method_prefix            go to state 41
    method_call              go to state 42
    premitive_type           go to state 43
    array_type               go to state 44
    type_abstract            go to state 45
    array_declaration        go to state 46
    array_access             go to state 47


state 28

   21 constructor_declaration: IDENT . LPAREN params RPAREN LBRACE constructor_body RBRACE
   30 assignment: IDENT . ASSIGN expression
   31           | IDENT . ASSIGN array_access
   32           | IDENT . ASSIGN method_call
   52 sufix_methode_list: IDENT . DOT IDENT
   95 array_type: IDENT . LBRACKET RBRACKET
   96 type_abstract: IDENT .
  106 array_access: IDENT . array_indices

    ASSIGN    shift, and go to state 53
    LPAREN    shift, and go to state 54
    LBRACKET  shift, and go to state 55
    DOT       shift, and go to state 56

    $default  reduce using rule 96 (type_abstract)

    array_indices  go to state 57


state 29

   51 print_statement: SYSTEM . DOT OUT DOT PRINTLN LPAREN expression RPAREN

    DOT  shift, and go to state 58


state 30

    4 class_declaration: modificator class_type CLASS IDENT LBRACE class_body . RBRACE

    RBRACE  shift, and go to state 59


state 31

   12 class_body: core_body_sequence .
   14 core_body_sequence: core_body_sequence . core_body

    BOOLEAN  shift, and go to state 15
    CHAR     shift, and go to state 16
    DOUBLE   shift, and go to state 17
    FLOAT    shift, and go to state 18
    FINAL    shift, and go to state 19
    INT      shift, and go to state 20
    STRING   shift, and go to state 21
    LONG     shift, and go to state 22
    VOID     shift, and go to state 23
    SHORT    shift, and go to state 24
    THIS     shift, and go to state 25
    SELF     shift, and go to state 26
    LBRACE   shift, and go to state 27
    IDENT    shift, and go to state 28
    SYSTEM   shift, and go to state 29

    $default  reduce using rule 12 (class_body)

    core_body                go to state 60
    instanciation            go to state 33
    constructor_declaration  go to state 34
    assignment               go to state 35
    variables_declaration    go to state 36
    constantes_declaration   go to state 37
    statement                go to state 38
    print_statement          go to state 39
    sufix_methode_list       go to state 40
    method_prefix            go to state 41
    method_call              go to state 42
    premitive_type           go to state 43
    array_type               go to state 44
    type_abstract            go to state 45
    array_declaration        go to state 46
    array_access             go to state 47


state 32

   13 core_body_sequence: core_body .

    $default  reduce using rule 13 (core_body_sequence)


state 33

   50 statement: instanciation .

    $default  reduce using rule 50 (statement)


state 34

   16 core_body: constructor_declaration .

    $default  reduce using rule 16 (core_body)


state 35

   44 statement: assignment . SEMICOLON

    SEMICOLON  shift, and go to state 61


state 36

   46 statement: variables_declaration .

    $default  reduce using rule 46 (statement)


state 37

   47 statement: constantes_declaration .

    $default  reduce using rule 47 (statement)


state 38

   15 core_body: statement .

    $default  reduce using rule 15 (core_body)


state 39

   48 statement: print_statement . SEMICOLON

    SEMICOLON  shift, and go to state 62


state 40

   53 sufix_methode_list: sufix_methode_list . DOT IDENT
   56 method_call: sufix_methode_list . LPAREN args RPAREN

    LPAREN  shift, and go to state 63
    DOT     shift, and go to state 64


state 41

   57 method_call: method_prefix . DOT IDENT LPAREN args RPAREN

    DOT  shift, and go to state 65


state 42

   49 statement: method_call . SEMICOLON

    SEMICOLON  shift, and go to state 66


state 43

   35 variables_declaration: premitive_type . variables_init SEMICOLON
   94 array_type: premitive_type . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 67
    IDENT     shift, and go to state 68

    assignment      go to state 69
    variables_init  go to state 70
    variable_init   go to state 71
    array_access    go to state 47


state 44

   97 array_declaration: array_type . IDENT SEMICOLON
   98                  | array_type . IDENT ASSIGN array_initialization SEMICOLON

    IDENT  shift, and go to state 72


state 45

   19 instanciation: type_abstract . IDENT ASSIGN creation_object SEMICOLON
   34 variables_declaration: type_abstract . variables_init SEMICOLON

    IDENT  shift, and go to state 73

    assignment      go to state 69
    variables_init  go to state 74
    variable_init   go to state 71
    array_access    go to state 47


state 46

   45 statement: array_declaration .

    $default  reduce using rule 45 (statement)


state 47

   33 assignment: array_access . ASSIGN expression

    ASSIGN  shift, and go to state 75


state 48

   96 type_abstract: IDENT .

    $default  reduce using rule 96 (type_abstract)


state 49

   37 constantes_declaration: FINAL premitive_type . constantes_init SEMICOLON

    IDENT  shift, and go to state 76

    assignment       go to state 77
    constantes_init  go to state 78
    array_access     go to state 47


state 50

   36 constantes_declaration: FINAL type_abstract . constantes_init SEMICOLON

    IDENT  shift, and go to state 76

    assignment       go to state 77
    constantes_init  go to state 79
    array_access     go to state 47


state 51

   17 core_body: LBRACE RBRACE .

    $default  reduce using rule 17 (core_body)


state 52

   14 core_body_sequence: core_body_sequence . core_body
   18 core_body: LBRACE core_body_sequence . RBRACE

    BOOLEAN  shift, and go to state 15
    CHAR     shift, and go to state 16
    DOUBLE   shift, and go to state 17
    FLOAT    shift, and go to state 18
    FINAL    shift, and go to state 19
    INT      shift, and go to state 20
    STRING   shift, and go to state 21
    LONG     shift, and go to state 22
    VOID     shift, and go to state 23
    SHORT    shift, and go to state 24
    THIS     shift, and go to state 25
    SELF     shift, and go to state 26
    LBRACE   shift, and go to state 27
    RBRACE   shift, and go to state 80
    IDENT    shift, and go to state 28
    SYSTEM   shift, and go to state 29

    core_body                go to state 60
    instanciation            go to state 33
    constructor_declaration  go to state 34
    assignment               go to state 35
    variables_declaration    go to state 36
    constantes_declaration   go to state 37
    statement                go to state 38
    print_statement          go to state 39
    sufix_methode_list       go to state 40
    method_prefix            go to state 41
    method_call              go to state 42
    premitive_type           go to state 43
    array_type               go to state 44
    type_abstract            go to state 45
    array_declaration        go to state 46
    array_access             go to state 47


state 53

   30 assignment: IDENT ASSIGN . expression
   31           | IDENT ASSIGN . array_access
   32           | IDENT ASSIGN . method_call

    THIS            shift, and go to state 25
    SELF            shift, and go to state 26
    NOT             shift, and go to state 81
    MINUS           shift, and go to state 82
    STRING_LITERAL  shift, and go to state 83
    LPAREN          shift, and go to state 84
    IDENT           shift, and go to state 85
    NUM             shift, and go to state 86

    sufix_methode_list  go to state 40
    method_prefix       go to state 41
    method_call         go to state 87
    expression          go to state 88
    simple_expression   go to state 89
    array_access        go to state 90


state 54

   21 constructor_declaration: IDENT LPAREN . params RPAREN LBRACE constructor_body RBRACE

    BOOLEAN  shift, and go to state 15
    CHAR     shift, and go to state 16
    DOUBLE   shift, and go to state 17
    FLOAT    shift, and go to state 18
    INT      shift, and go to state 20
    STRING   shift, and go to state 21
    LONG     shift, and go to state 22
    VOID     shift, and go to state 23
    SHORT    shift, and go to state 24
    IDENT    shift, and go to state 91

    $default  reduce using rule 25 (params)

    params          go to state 92
    param_list      go to state 93
    param_def       go to state 94
    types           go to state 95
    premitive_type  go to state 96
    array_type      go to state 97
    type_abstract   go to state 98


state 55

   95 array_type: IDENT LBRACKET . RBRACKET
  107 array_indices: LBRACKET . expression RBRACKET

    NOT             shift, and go to state 81
    MINUS           shift, and go to state 82
    STRING_LITERAL  shift, and go to state 83
    LPAREN          shift, and go to state 84
    RBRACKET        shift, and go to state 99
    IDENT           shift, and go to state 100
    NUM             shift, and go to state 86

    expression         go to state 101
    simple_expression  go to state 89


state 56

   52 sufix_methode_list: IDENT DOT . IDENT

    IDENT  shift, and go to state 102


state 57

  106 array_access: IDENT array_indices .
  108 array_indices: array_indices . LBRACKET expression RBRACKET

    LBRACKET  shift, and go to state 103

    $default  reduce using rule 106 (array_access)


state 58

   51 print_statement: SYSTEM DOT . OUT DOT PRINTLN LPAREN expression RPAREN

    OUT  shift, and go to state 104


state 59

    4 class_declaration: modificator class_type CLASS IDENT LBRACE class_body RBRACE .

    $default  reduce using rule 4 (class_declaration)


state 60

   14 core_body_sequence: core_body_sequence core_body .

    $default  reduce using rule 14 (core_body_sequence)


state 61

   44 statement: assignment SEMICOLON .

    $default  reduce using rule 44 (statement)


state 62

   48 statement: print_statement SEMICOLON .

    $default  reduce using rule 48 (statement)


state 63

   56 method_call: sufix_methode_list LPAREN . args RPAREN

    NOT             shift, and go to state 81
    MINUS           shift, and go to state 82
    STRING_LITERAL  shift, and go to state 83
    LPAREN          shift, and go to state 84
    IDENT           shift, and go to state 100
    NUM             shift, and go to state 86

    $default  reduce using rule 58 (args)

    args               go to state 105
    arg_list           go to state 106
    expression         go to state 107
    simple_expression  go to state 89


state 64

   53 sufix_methode_list: sufix_methode_list DOT . IDENT

    IDENT  shift, and go to state 108


state 65

   57 method_call: method_prefix DOT . IDENT LPAREN args RPAREN

    IDENT  shift, and go to state 109


state 66

   49 statement: method_call SEMICOLON .

    $default  reduce using rule 49 (statement)


state 67

   94 array_type: premitive_type LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 110


state 68

   30 assignment: IDENT . ASSIGN expression
   31           | IDENT . ASSIGN array_access
   32           | IDENT . ASSIGN method_call
   42 variable_init: IDENT .
  106 array_access: IDENT . array_indices

    ASSIGN    shift, and go to state 53
    LBRACKET  shift, and go to state 111

    $default  reduce using rule 42 (variable_init)

    array_indices  go to state 57


state 69

   43 variable_init: assignment .

    $default  reduce using rule 43 (variable_init)


state 70

   35 variables_declaration: premitive_type variables_init . SEMICOLON
   38 variables_init: variables_init . COMMA variable_init

    SEMICOLON  shift, and go to state 112
    COMMA      shift, and go to state 113


state 71

   39 variables_init: variable_init .

    $default  reduce using rule 39 (variables_init)


state 72

   97 array_declaration: array_type IDENT . SEMICOLON
   98                  | array_type IDENT . ASSIGN array_initialization SEMICOLON

    ASSIGN     shift, and go to state 114
    SEMICOLON  shift, and go to state 115


state 73

   19 instanciation: type_abstract IDENT . ASSIGN creation_object SEMICOLON
   30 assignment: IDENT . ASSIGN expression
   31           | IDENT . ASSIGN array_access
   32           | IDENT . ASSIGN method_call
   42 variable_init: IDENT .
  106 array_access: IDENT . array_indices

    ASSIGN    shift, and go to state 116
    LBRACKET  shift, and go to state 111

    $default  reduce using rule 42 (variable_init)

    array_indices  go to state 57


state 74

   34 variables_declaration: type_abstract variables_init . SEMICOLON
   38 variables_init: variables_init . COMMA variable_init

    SEMICOLON  shift, and go to state 117
    COMMA      shift, and go to state 113


state 75

   33 assignment: array_access ASSIGN . expression

    NOT             shift, and go to state 81
    MINUS           shift, and go to state 82
    STRING_LITERAL  shift, and go to state 83
    LPAREN          shift, and go to state 84
    IDENT           shift, and go to state 100
    NUM             shift, and go to state 86

    expression         go to state 118
    simple_expression  go to state 89


state 76

   30 assignment: IDENT . ASSIGN expression
   31           | IDENT . ASSIGN array_access
   32           | IDENT . ASSIGN method_call
  106 array_access: IDENT . array_indices

    ASSIGN    shift, and go to state 53
    LBRACKET  shift, and go to state 111

    array_indices  go to state 57


state 77

   41 constantes_init: assignment .

    $default  reduce using rule 41 (constantes_init)


state 78

   37 constantes_declaration: FINAL premitive_type constantes_init . SEMICOLON
   40 constantes_init: constantes_init . COMMA assignment

    SEMICOLON  shift, and go to state 119
    COMMA      shift, and go to state 120


state 79

   36 constantes_declaration: FINAL type_abstract constantes_init . SEMICOLON
   40 constantes_init: constantes_init . COMMA assignment

    SEMICOLON  shift, and go to state 121
    COMMA      shift, and go to state 120


state 80

   18 core_body: LBRACE core_body_sequence RBRACE .

    $default  reduce using rule 18 (core_body)


state 81

   77 simple_expression: NOT . simple_expression

    NOT             shift, and go to state 81
    STRING_LITERAL  shift, and go to state 83
    LPAREN          shift, and go to state 84
    IDENT           shift, and go to state 100
    NUM             shift, and go to state 86

    simple_expression  go to state 122


state 82

   75 expression: MINUS . expression

    NOT             shift, and go to state 81
    MINUS           shift, and go to state 82
    STRING_LITERAL  shift, and go to state 83
    LPAREN          shift, and go to state 84
    IDENT           shift, and go to state 100
    NUM             shift, and go to state 86

    expression         go to state 123
    simple_expression  go to state 89


state 83

   81 simple_expression: STRING_LITERAL .

    $default  reduce using rule 81 (simple_expression)


state 84

   78 simple_expression: LPAREN . expression RPAREN

    NOT             shift, and go to state 81
    MINUS           shift, and go to state 82
    STRING_LITERAL  shift, and go to state 83
    LPAREN          shift, and go to state 84
    IDENT           shift, and go to state 100
    NUM             shift, and go to state 86

    expression         go to state 124
    simple_expression  go to state 89


state 85

   52 sufix_methode_list: IDENT . DOT IDENT
   79 simple_expression: IDENT .
  106 array_access: IDENT . array_indices

    LBRACKET  shift, and go to state 111
    DOT       shift, and go to state 56

    $default  reduce using rule 79 (simple_expression)

    array_indices  go to state 57


state 86

   80 simple_expression: NUM .

    $default  reduce using rule 80 (simple_expression)


state 87

   32 assignment: IDENT ASSIGN method_call .

    $default  reduce using rule 32 (assignment)


state 88

   30 assignment: IDENT ASSIGN expression .
   62 expression: expression . PLUS simple_expression
   63           | expression . MINUS simple_expression
   64           | expression . MULTIPLY simple_expression
   65           | expression . DIVIDE simple_expression
   66           | expression . MOD simple_expression
   67           | expression . EQ simple_expression
   68           | expression . NEQ simple_expression
   69           | expression . LT simple_expression
   70           | expression . GT simple_expression
   71           | expression . LTE simple_expression
   72           | expression . GTE simple_expression
   73           | expression . AND simple_expression
   74           | expression . OR simple_expression

    EQ        shift, and go to state 125
    NEQ       shift, and go to state 126
    LT        shift, and go to state 127
    GT        shift, and go to state 128
    LTE       shift, and go to state 129
    GTE       shift, and go to state 130
    AND       shift, and go to state 131
    OR        shift, and go to state 132
    PLUS      shift, and go to state 133
    MINUS     shift, and go to state 134
    MULTIPLY  shift, and go to state 135
    DIVIDE    shift, and go to state 136
    MOD       shift, and go to state 137

    $default  reduce using rule 30 (assignment)


state 89

   76 expression: simple_expression .

    $default  reduce using rule 76 (expression)


state 90

   31 assignment: IDENT ASSIGN array_access .

    $default  reduce using rule 31 (assignment)


state 91

   95 array_type: IDENT . LBRACKET RBRACKET
   96 type_abstract: IDENT .

    LBRACKET  shift, and go to state 138

    $default  reduce using rule 96 (type_abstract)


state 92

   21 constructor_declaration: IDENT LPAREN params . RPAREN LBRACE constructor_body RBRACE

    RPAREN  shift, and go to state 139


state 93

   26 params: param_list .
   28 param_list: param_list . COMMA param_def

    COMMA  shift, and go to state 140

    $default  reduce using rule 26 (params)


state 94

   27 param_list: param_def .

    $default  reduce using rule 27 (param_list)


state 95

   29 param_def: types . IDENT

    IDENT  shift, and go to state 141


state 96

   82 types: premitive_type .
   94 array_type: premitive_type . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 67

    $default  reduce using rule 82 (types)


state 97

   84 types: array_type .

    $default  reduce using rule 84 (types)


state 98

   83 types: type_abstract .

    $default  reduce using rule 83 (types)


state 99

   95 array_type: IDENT LBRACKET RBRACKET .

    $default  reduce using rule 95 (array_type)


state 100

   79 simple_expression: IDENT .

    $default  reduce using rule 79 (simple_expression)


state 101

   62 expression: expression . PLUS simple_expression
   63           | expression . MINUS simple_expression
   64           | expression . MULTIPLY simple_expression
   65           | expression . DIVIDE simple_expression
   66           | expression . MOD simple_expression
   67           | expression . EQ simple_expression
   68           | expression . NEQ simple_expression
   69           | expression . LT simple_expression
   70           | expression . GT simple_expression
   71           | expression . LTE simple_expression
   72           | expression . GTE simple_expression
   73           | expression . AND simple_expression
   74           | expression . OR simple_expression
  107 array_indices: LBRACKET expression . RBRACKET

    EQ        shift, and go to state 125
    NEQ       shift, and go to state 126
    LT        shift, and go to state 127
    GT        shift, and go to state 128
    LTE       shift, and go to state 129
    GTE       shift, and go to state 130
    AND       shift, and go to state 131
    OR        shift, and go to state 132
    PLUS      shift, and go to state 133
    MINUS     shift, and go to state 134
    MULTIPLY  shift, and go to state 135
    DIVIDE    shift, and go to state 136
    MOD       shift, and go to state 137
    RBRACKET  shift, and go to state 142


state 102

   52 sufix_methode_list: IDENT DOT IDENT .

    $default  reduce using rule 52 (sufix_methode_list)


state 103

  108 array_indices: array_indices LBRACKET . expression RBRACKET

    NOT             shift, and go to state 81
    MINUS           shift, and go to state 82
    STRING_LITERAL  shift, and go to state 83
    LPAREN          shift, and go to state 84
    IDENT           shift, and go to state 100
    NUM             shift, and go to state 86

    expression         go to state 143
    simple_expression  go to state 89


state 104

   51 print_statement: SYSTEM DOT OUT . DOT PRINTLN LPAREN expression RPAREN

    DOT  shift, and go to state 144


state 105

   56 method_call: sufix_methode_list LPAREN args . RPAREN

    RPAREN  shift, and go to state 145


state 106

   59 args: arg_list .
   61 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 146

    $default  reduce using rule 59 (args)


state 107

   60 arg_list: expression .
   62 expression: expression . PLUS simple_expression
   63           | expression . MINUS simple_expression
   64           | expression . MULTIPLY simple_expression
   65           | expression . DIVIDE simple_expression
   66           | expression . MOD simple_expression
   67           | expression . EQ simple_expression
   68           | expression . NEQ simple_expression
   69           | expression . LT simple_expression
   70           | expression . GT simple_expression
   71           | expression . LTE simple_expression
   72           | expression . GTE simple_expression
   73           | expression . AND simple_expression
   74           | expression . OR simple_expression
